Add puree de panais and amaretto sunrise recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/crepes.html">Crepe recipe</a>
+    <ul>
+        <li><a href="recipes/crepes.html">Crepe recipe</a></li>
+        <li><a href="recipes/puree_panais.html">Purée de panais</a></li>
+        <li><a href="recipes/amaretto_sunrise.html">Amaretto Sunrise</a></li>
+    </ul>
 </body>
 </html>
